@@ -1,3 +1,8 @@
+2002-03-04  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/autogsdoc.m: Output gsdoc as UTF8 as we should.
+	* Tools/AGSOutput.m: ditto.
+
 2002-03-01  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSUser.m: When reading .GNUsteprc, if a per user version is
